@@ -26,20 +26,20 @@ in
   "${mainMod}, up, movefocus, u"
   "${mainMod}, down, movefocus, d"
 
-  # "${mainMod}, h, movefocus, l"
-  # "${mainMod}, j, movefocus, d"
-  # "${mainMod}, k, movefocus, u"
-  # "${mainMod}, l, movefocus, r"
+  "${mainMod}, h, movefocus, l"
+  "${mainMod}, j, movefocus, d"
+  "${mainMod}, k, movefocus, u"
+  "${mainMod}, l, movefocus, r"
 
   "${mainMod} SHIFT, left, movewindow, l"
   "${mainMod} SHIFT, right, movewindow, r"
   "${mainMod} SHIFT, up, movewindow, u"
   "${mainMod} SHIFT, down, movewindow, d"
 
-  # "${mainMod} SHIFT, h, movewindow, l"
-  # "${mainMod} SHIFT, j, movewindow, d"
-  # "${mainMod} SHIFT, k, movewindow, u"
-  # "${mainMod} SHIFT, l, movewindow, r"
+  "${mainMod} SHIFT, h, movewindow, l"
+  "${mainMod} SHIFT, j, movewindow, d"
+  "${mainMod} SHIFT, k, movewindow, u"
+  "${mainMod} SHIFT, l, movewindow, r"
 
   "${mainMod}, 1, workspace, 1"
   "${mainMod}, 2, workspace, 2"
